components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/container_gateway_templates/container_ingress_template.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: perapigw-1234-ingress
  namespace: default
  labels:
    gateway: perapigw-1234
    tier: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - perapigw-1234
  rules:
  - host: perapigw-1234
    http:
      paths:
      - path: /
        backend:
          serviceName: perapigw-1234-service
          servicePort: 9092
