components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/container_gateway_templates/container_service_template.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: perapigw-1234-service
  namespace: default
  labels:
    gateway: perapigw-1234  # should have the auto-generated label as the value
    tier: prod
spec:
  ports:
    # ports that this service should serve on
    - name: 'pass-through-http'
      port: 9090
      protocol: TCP
    - name: 'pass-through-https'
      port: 9092
      protocol: TCP

  # label keys and values that must match in order to receive traffic for this service
  selector:
    gateway: perapigw-1234
